Fixed Portfolio layout issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -118,6 +118,8 @@ a:hover {
   padding: 0;
   position: relative;
   margin: 7px;
+  height: 360px;
+  background-size: cover;
 }
 
 
